# pymulti

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  func.py
src/: config.h.in
src/11/: main.c
src/12/: main.c
